--- a/src/LibraryApp/fxmlFiles/CreateBook.fxml
+++ b/src/LibraryApp/fxmlFiles/CreateBook.fxml
@@ -8,49 +8,39 @@
    <children>
       <VBox prefHeight="400.0" prefWidth="600.0">
          <children>
-            <TextField fx:id="title" onAction="#title" promptText="Title">
+            <TextField fx:id="title" promptText="Title">
                <padding>
                   <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
                </padding>
             </TextField>
-            <TextField fx:id="author" layoutX="10.0" layoutY="10.0" onAction="#author" promptText="Author">
+            <TextField fx:id="author" layoutX="10.0" layoutY="10.0" promptText="Author">
                <padding>
                   <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
                </padding>
             </TextField>
-            <TextField fx:id="publisher" layoutX="10.0" layoutY="67.0" onAction="#publisher" promptText="Publisher">
+            <TextField fx:id="publisher" layoutX="10.0" layoutY="67.0" promptText="Publisher">
                <padding>
                   <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
                </padding>
             </TextField>
-            <TextField fx:id="date" layoutX="10.0" layoutY="47.0" onAction="#date" promptText="Publication Date">
+            <TextField fx:id="date" layoutX="10.0" layoutY="47.0" promptText="Publication Date">
                <padding>
                   <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
                </padding>
             </TextField>
-            <TextField fx:id="lib" layoutX="10.0" layoutY="47.0" onAction="#lib" promptText="Library">
-               <padding>
-                  <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="ISBN" layoutX="10.0" layoutY="84.0" onAction="#ISBN" promptText="ISBN number">
-               <padding>
-                  <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="copies" layoutX="10.0" layoutY="121.0" onAction="#copies" promptText="Number of Copies">
+            <TextField fx:id="ISBN" layoutX="10.0" layoutY="84.0" promptText="ISBN number">
                <padding>
                   <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
                </padding>
             </TextField>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="okayButton" alignment="CENTER" mnemonicParsing="false" onAction="#createBook" text="Okay" textAlignment="CENTER">
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#createBook" text="Okay" textAlignment="CENTER">
                      <HBox.margin>
                         <Insets left="200.0" right="50.0" top="15.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="cancelButton" alignment="CENTER" mnemonicParsing="false" onAction="#cancel" text="Cancel" textAlignment="RIGHT">
+                  <Button alignment="CENTER" mnemonicParsing="false" onAction="#cancel" text="Cancel" textAlignment="RIGHT">
                      <HBox.margin>
                         <Insets left="50.0" right="150.0" top="15.0" />
                      </HBox.margin>
