--- a/src/LibraryApp/fxmlFiles/CreateBook.fxml
+++ b/src/LibraryApp/fxmlFiles/CreateBook.fxml
@@ -3,11 +3,20 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LibraryApp.BookController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LibraryApp.CreateBookController">
    <children>
       <VBox prefHeight="400.0" prefWidth="600.0">
          <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="New Book" textAlignment="CENTER">
+               <font>
+                  <Font size="24.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="240.0" top="20.0" />
+               </VBox.margin>
+            </Text>
             <TextField fx:id="title" promptText="Title">
                <padding>
                   <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
