--- a/src/LibraryApp/fxmlFiles/ViewAuthor.fxml
+++ b/src/LibraryApp/fxmlFiles/ViewAuthor.fxml
@@ -1,11 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LibraryApp.ViewAuthorController">
-   <children>
-      <Label fx:id="testLabel" layoutX="227.0" layoutY="163.0" text="Label" />
-   </children>
-</AnchorPane>
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LibraryApp.ViewAuthorController">
+   <top>
+      <Label fx:id="authorName" prefHeight="67.0" prefWidth="174.0" text="Label" BorderPane.alignment="CENTER">
+         <graphic>
+            <Label text="Author:" textAlignment="CENTER">
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+         </graphic>
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+   </top>
+   <center>
+       <TableView fx:id="tableView" prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+           <columnResizePolicy>
+               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+           </columnResizePolicy>
+           <columns>
+               <TableColumn fx:id="nameCol" prefWidth="75.0" text="Book Name" />
+               <TableColumn fx:id="authorCol" prefWidth="75.0" text="Author" />
+               <TableColumn fx:id="publisherCol" prefWidth="75.0" text="Publisher" />
+               <TableColumn fx:id="topicsCol" prefWidth="75.0" text="Topics" />
+               <TableColumn fx:id="availabilityCol" prefWidth="75.0" text="Availability" />
+               <TableColumn fx:id="viewBookCol" prefWidth="75.0" />
+           </columns>
+       </TableView>
+   </center>
+   <bottom>
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+            <Button mnemonicParsing="false" onAction="#home" text="Home" ButtonBar.buttonData="LEFT" />
+        </buttons>
+      </ButtonBar>
+   </bottom>
+</BorderPane>
