--- a/src/LibraryApp/fxmlFiles/ViewAuthor.fxml
+++ b/src/LibraryApp/fxmlFiles/ViewAuthor.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="LibraryApp.ViewAuthorController">
    <top>
-      <Label fx:id="authorName" prefHeight="67.0" prefWidth="174.0" text="Label" BorderPane.alignment="CENTER">
+      <Label fx:id="authorNameLabel" prefHeight="67.0" prefWidth="174.0" text="Label" BorderPane.alignment="CENTER">
          <graphic>
             <Label text="Author:" textAlignment="CENTER">
                <padding>
