--- a/src/LibraryApp/fxmlFiles/AllEBooks.fxml
+++ b/src/LibraryApp/fxmlFiles/AllEBooks.fxml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -19,14 +17,24 @@
                         <TableColumn fx:id="authorCol" prefWidth="75.0" text="Author" />
                         <TableColumn fx:id="publisherCol" prefWidth="75.0" text="Publisher" />
                         <TableColumn fx:id="topicsCol" prefWidth="75.0" text="Topics" />
-                        <TableColumn fx:id="viewEBookCol" prefWidth="75.0"/>
+                        <TableColumn fx:id="viewEBookCol" prefWidth="75.0" />
                     </columns>
                 </TableView>
             </center>
             <top>
-                <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="TOP_CENTER">
+                <ButtonBar prefHeight="51.0" prefWidth="200.0" BorderPane.alignment="TOP_CENTER">
                     <buttons>
-                        <Button mnemonicParsing="false" text="Home" onAction="#home" ButtonBar.buttonData="LEFT" />
+                        <Button maxWidth="100.0" mnemonicParsing="false" onAction="#home" prefHeight="25.0" prefWidth="20.0" text="Home" translateX="40.0" ButtonBar.buttonData="LEFT" />
+                        <Label maxWidth="198.0" prefHeight="17.0" prefWidth="223.0" text="Showing All EBooks">
+                            <padding>
+                                <Insets left="15.0" />
+                            </padding>
+                        </Label>
+                        <Button mnemonicParsing="false" onAction="#search" prefHeight="33.0" text="Search" translateX="-40.0" BorderPane.alignment="CENTER">
+                            <graphic>
+                                <TextField fx:id="search" />
+                            </graphic>
+                        </Button>
                     </buttons>
                 </ButtonBar>
             </top>
